# cowamm-execution

./: Cargo.toml  NOTES.md  README.md  helper.rs
api_client/: Cargo.toml
app_data/: Cargo.toml
app_data/src/: lib.rs
contracts/: Cargo.toml  build.rs
contracts/src/: errors.rs
contracts/src/solidity/: MultiCall.sol
contracts/src/solidity/interfaces/: IERC1271.sol
cow_amm/: Cargo.toml
cow_amm/src/: helper.rs  signature_validator.rs
crates/api_client/: Cargo.toml
crates/api_client/src/: client.rs  lib.rs  models.rs  urls.rs
crates/contracts/: Cargo.toml  build.rs
crates/contracts/artifacts/: BCowPool.json  Balances.json  ChainalysisOracle.json  CoWSwapOnchainOrders.json  Counter.json  GasHog.json  GnosisSafeProxy.json  HooksTrampoline.json  Multicall.json  Signatures.json  SimulateCode.json
crates/contracts/src/: lib.rs  macros.rs  storage_accessible.rs  web3.rs
crates/contracts/src/solidity/: Balances.sol  Signatures.sol  SimulateCode.sol
crates/contracts/src/solidity/interfaces/: IVaultRelayer.sol
crates/cow_amm/: Cargo.toml
crates/cow_amm/src/: helper.rs  lib.rs  signature_validator.rs  types.rs
crates/driver/: Cargo.toml
crates/driver/liquidity/: cowamm_exit_pool.rs
crates/driver/src/: lib.rs
crates/driver/src/domain/eth/: allowance.rs  gas.rs
crates/driver/src/domain/liquidity/: mod.rs
crates/ethrpc/: Cargo.toml  instrumented.rs
crates/ethrpc/src/: buffered.rs  dummy.rs  http.rs  instrumented.rs  lib.rs  multicall.rs
crates/ethrpc/src/alloy/: instrumentation.rs
crates/example/: Cargo.toml
crates/example/src/: main.rs
crates/interactions/: Cargo.toml
crates/interactions/src/: allowances.rs  encode_cowamm.rs  exit_pool.rs  join_pool.rs  lib.rs  weth.rs
crates/observe/: Cargo.toml
crates/observe/src/: future.rs  metrics.rs  tracing.rs  tracing_reload_handler.rs
crates/observe/src/distributed_tracing/: mod.rs  request_id.rs  trace_id_format.rs
crates/settlement/: Cargo.toml
crates/settlement/src/: lib.rs  settlement_encoder.rs
crates/shared/: Cargo.toml
crates/shared/src/: interaction.rs  lib.rs
crates/shared/src/app_data/: app_data_hash.rs  hooks.rs
crates/shared/src/models/: competition.rs  fee_policy.rs  interaction.rs  mod.rs  order.rs  quote.rs  trade.rs
crates/shared/src/observe/: Cargo.toml
crates/shared/src/observe/src/: config.rs  lib.rs
crates/shared/src/observe/src/distributed_tracing/: tracing_axum.rs  tracing_warp.rs
crates/testlib/: Cargo.toml
crates/testlib/src/: json_matching.rs  lib.rs  protocol.rs  tokens.rs
encoding/: Cargo.toml
encoding/src/: lib.rs
examples/: example.rs
interactions/: Cargo.toml
interactions/src/: erc20.rs  interaction.rs  join_pool.rs
interactions/src/liquidity/: cowamm_exit_pool.rs
shared/: Cargo.toml
shared/src/: interaction.rs
shared/src/app_data/: app_data.rs
shared/src/models/: auction.rs  signature.rs  time.rs
shared/src/number/: conversion.rs  mod.rs
shared/src/utils/: hex.rs  mod.rs  url_utils.rs
src/: interaction.rs  lib.rs  main.rs  mod.rs
src/abi/: b_cow_helper.json
src/api_client/: client.rs  lib.rs
src/contracts/: build.rs  contracts.rs  mod.rs  paths.rs  storage_accessible.rs
src/contracts/solidity/interfaces/: ISettlement.sol  IStorageAcessible.sol  IVault.sol
src/cow_amm/: helper.rs  mod.rs  signature_validator.rs  types.rs
src/domain/eth/: eip712.rs  mod.rs
src/domain/liquidity/: mod.rs
src/evm/engine_db/: engine_db_interface.rs  mod.rs  simulation_db.rs  tycho_db.rs  utils.rs
src/evm/protocol/vm/: constants.rs  erc20_token.rs  tycho_simulation_contract.rs
src/interactions/: allowances.rs  erc20.rs  exit_pool.rs  interaction.rs  join_pool.rs  mod.rs
src/interactions/liquidity/: cowamm_exit_pool.rs  cowamm_join_pool.rs
src/models/: auction.rs  fee_policy.rs  interaction.rs  mod.rs  models.rs  order.rs  quote.rs  signature.rs  trade.rs
src/settlement/: mod.rs  settlement_encoder.rs
src/shared/: http_solver.rs  interaction.rs  mod.rs
src/shared/app_data/: app_data.rs  hooks.rs  mod.rs
src/shared/models/: auction.rs  domain_separator.rs  fee_policy.rs  interaction.rs  order.rs  quote.rs  signature.rs  token_pair.rs  trade.rs
src/shared/number/: nonzero.rs  serialization.rs
src/shared/utils/: bytes_hex.rs  mod.rs
src/utils/: mod.rs
utils/: Cargo.toml
utils/src/: lib.rs
