[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
alloy = "1.0.12"
anyhow = "1.0.98"
async-trait = "0.1.88"
bigdecimal = "0.4.8"
chrono = { version = "0.4.41", features = ["serde"], default-features = false}
derive_more = { version = "2.0.1", features = ["full"] }
dotenv = "0.15.0"
ethcontract = "0.25.8"
foundry-evm = "0.0.0"
futures = "0.3.31"
hex = "0.4.3"
api_client = { path = "crates/api_client" }
cow_amm = { path = "crates/cow_amm" }
contracts = { path = "crates/contracts" }
ethrpc = { path = "crates/ethrpc" }
interactions = { path = "crates/interactions" }
settlement = { path = "crates/settlement" }
shared = { path = "crates/shared" }
testlib = { path = "crates/testlib" }
example = { path = "crates/example" }
hex-literal = "1.0.0"
itertools = "0.14.0"
lazy_static = "1.5.0"
maplit = "1.0.2"
mockall = "0.13.1"
num = "0.4.3"
ethcontract-mock = "0.25.8"
ethcontract-generate = "0.25.8"
primitive-types = "0.12"
reqwest = "0.12.22"
revm = "26.0.1"
secp256k1 = "0.31.1"
scopeguard = "1.2.0"
serde = "1.0.219"
serde_json = "1.0.140"
serde_with = "3.13.0"
strum = "0.27.2"
thiserror = "2.0.12"
tiny-keccak = "2.0.2"
tokio = "1.45.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
web3 = "0.19.0"
prometheus = "0.14.0"
prometheus-metric-storage = "0.5.0"
pin-project-lite = "0.2.16"
tokio-stream = "0.1.17"
tower = "0.5.2"

[workspace.lints]
clippy.cast_possible_wrap = "deny"
