[package]
name = "cowamm-execution"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
# Git dependencies - path is relative to the git repository root
ethrpc = { git = "https://github.com/cowprotocol/services", rev = "d884bbe4db35f6d48f53cfeef856a72d7f50d302" }
observe = { git = "https://github.com/cowprotocol/services", rev = "d884bbe4db35f6d48f53cfeef856a72d7f50d302" }
shared = { git = "https://github.com/cowprotocol/services", rev = "d884bbe4db35f6d48f53cfeef856a72d7f50d302" }
testlib = { git = "https://github.com/cowprotocol/services", rev = "d884bbe4db35f6d48f53cfeef856a72d7f50d302" }
model = { git = "https://github.com/cowprotocol/services", rev = "d884bbe4db35f6d48f53cfeef856a72d7f50d302" }
number = { git = "https://github.com/cowprotocol/services", rev = "d884bbe4db35f6d48f53cfeef856a72d7f50d302" }
app_data = { package = "app-data", git = "https://github.com/cowprotocol/services", rev = "d884bbe4db35f6d48f53cfeef856a72d7f50d302" }

tycho_simulation = { git = "https://github.com/adpthegreat/tycho-simulation", branch = "add_cowamm_simulation", package = "tycho-simulation", default-features = false, features = ["evm"]}

# Local path dependencies
api_client = { path = "crates/api_client" }
cow_amm = { path = "crates/cow_amm" }
contracts = { path = "crates/contracts" }
interactions = { path = "crates/interactions" }

alloy = "1.0.12"
time = "0.3.41"
anyhow = "=1.0.76"
async-trait = "0.1.88"
bigdecimal = "0.4.8"
chrono = { version = "0.4.41", features = ["serde"], default-features = false}
derive_more = { version = "2.0.1", features = ["full"] }
dotenv = "0.15.0"
ethcontract = { git = "https://github.com/cowprotocol/ethcontract-rs", rev = "8e112a88988040cde6110379ee6d1be768a13244", default-features = false, features = ["aws-kms"] }
foundry-evm = "0.0.0"
futures = "0.3.31"
hex = "0.4.3"
hex-literal = "1.0.0"
itertools = "0.14.0"
lazy_static = "1.5.0"
maplit = "1.0.2"
mockall = "0.13.1"
num = "0.4.3"
num-bigint = { version = "0.4.6", features = ["serde"] }
ethcontract-generate = { git = "https://github.com/cowprotocol/ethcontract-rs", rev = "8e112a88988040cde6110379ee6d1be768a13244", default-features = false }
ethcontract-mock = { git = "https://github.com/cowprotocol/ethcontract-rs", rev = "8e112a88988040cde6110379ee6d1be768a13244", default-features = false }
primitive-types = "0.12"
reqwest = "0.12.22"
revm = "26.0.1"
secp256k1 = "0.31.1"
scopeguard = "1.2.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
console-subscriber = "0.4.1"
opentelemetry = "0.30.0"
opentelemetry-otlp = "0.30.0"
tracing-opentelemetry = "0.31.0"
tracing-serde = "0.2.0"
opentelemetry_sdk = "0.30.0"
serde_with = "=3.8.1"
strum = "0.27.2"
axum = "0.8.4"
warp = { version = "0.4.1", features = ["server"] }
thiserror = "2.0.12"
tiny-keccak = "2.0.2"
tokio = "1.45.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
web3 = "0.19.0"
prometheus = "0.13.4"
atty = "0.2.14"
prometheus-metric-storage = "0.5.0"
pin-project-lite = "0.2.16"
tokio-stream = "0.1.17"
tower = "0.5.2"

[workspace.lints]
clippy.cast_possible_wrap = "deny"
