[package]
name = "api_client"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
utils = { path = "../utils" }
reqwest = "0.12.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_with = "3.13.0"
serde_json = "1.0.140"
anyhow = "1.0.98"
tokio = "1.45.1"
async-trait = "0.1.88"
url = "2.5.4"
primitive-types = "0.12"