[package]
name = "app_data"
version = "0.1.0"
edition = "2021"

[dependencies]
# Add dependencies as needed

# App Data dependencies
shared = { path = "../shared" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.13.0"
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"], default-features = false}
