[package]
name = "encoding"
version = "0.1.0"
edition = "2021"

[dependencies]
# Add dependencies as needed

# Encoding dependencies
shared = { path = "../shared" }
utils = { path = "../utils" }
hex = "0.4.3"
hex-literal = "1.0.0"
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.98"
tiny-keccak = "2.0.2"
