[package]
name = "interactions"
version = "0.1.0"
edition = "2021"

[dependencies]
# Add dependencies as needed

# Interactions dependencies
shared = { path = "../shared" }
utils = { path = "../utils" }
contracts = { path = "../contracts" }
cow_amm = { path = "../cow_amm" }
api_client = { path = "../api_client" }
alloy = "1.0.12"
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.98"
tokio = "1.45.1"
async-trait = "0.1.88"
futures = "0.3.31"
