[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[features]
default = []
test_helpers = []
e2e = []

[dependencies]
# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.13.0"

# Error handling
anyhow = "1.0.98"
thiserror = "2.0.12"

# Blockchain/crypto
alloy = "1.0.12"
ethcontract = "0.25.8" 
web3 = "0.19.0"
primitive-types = "0.12"
tiny-keccak = "2.0.2"
hex = "0.4.3"
hex-literal = "1.0.0"

# Math
num = "0.4.3"
bigdecimal = "0.4.8"

# Utilities
derive_more = { version = "2.0.1", features = ["full"] }
strum = "0.27.2"
chrono = { version = "0.4.41", features = ["serde"], default-features = false}
url = "2.5.4"

# Async
tokio = "1.45.1"
futures = "0.3.31"
async-trait = "0.1.88"
