[package]
name = "api_client"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
reqwest = { workspace = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_with = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
hex-literal = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
url = "2.5.4"
primitive-types = { workspace = true }
ethcontract = { workspace = true }