[package]
name = "api_client"
version = "0.1.0"
edition = "2021"

[dependencies]
model = { workspace = true, features = ["e2e"] }
number = { workspace = true }
shared = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true,  features = ["derive"] }
serde_with = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
hex-literal = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
app_data = { workspace = true }
url = { workspace = true }
num = { workspace = true }
primitive-types = { workspace = true }
ethcontract = { workspace = true }
web3 = { workspace = true }
derive_more = {  workspace = true }