[package]
name = "contracts"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "vendor"
required-features = ["bin"]

[features]
default = []
bin = [
    "ethcontract-generate",
    "serde_json",
    "tracing",
    "tracing-subscriber",
]

[dependencies]
serde = { workspace = true }
shared = { path = "../shared" }
ethcontract = { workspace = true }

# [bin-dependencies]
anyhow = { workspace = true }
ethcontract-generate = { workspace = true, optional = true, features = ["http"] }
serde_json = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"], optional = true }

[build-dependencies]
ethcontract = { workspace = true }
ethcontract-generate = { workspace = true }
