[package]
name = "cow_amm"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
contracts = { path = "../contracts" }
bigdecimal = { workspace = true }
num = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
primitive-types = { workspace = true }
ethcontract = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
hex-literal = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
mockall = { workspace = true }
