[package]
name = "example"
version = "0.1.0"
edition = "2024"

[dependencies]
cow_amm = { path = "../cow_amm" }
contracts = { path = "../contracts" }
interactions = { path = "../interactions" }
ethcontract = { workspace = true }
web3 = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }
[lints]
workspace = true
