[package]
name = "interactions"
version = "0.1.0"
edition = "2021"

[dependencies]
# Add dependencies as needed

# Interactions dependencies
shared = { path = "../shared" }
contracts = { path = "../contracts" }
cow_amm = { path = "../cow_amm" }
api_client = { path = "../api_client" }
alloy = { workspace = true }
serde = { workspace = true }
ethcontract = { workspace = true }
tracing = { workspace = true }
primitive-types = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
web3 = { workspace = true }
maplit = { workspace = true }
futures = { workspace = true }
ethrpc = { path = "../ethrpc" }