[package]
name = "interactions"
version = "0.1.0"
edition = "2021"

[dependencies]
model = { workspace = true }
shared = { workspace = true }
contracts = { path = "../contracts" }
cow_amm = { path = "../cow_amm" }
ethrpc = { workspace = true }
api_client = { path = "../api_client" }
alloy = { workspace = true }
serde = { workspace = true }
ethcontract = { workspace = true }
tracing = { workspace = true }
primitive-types = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
web3 = { workspace = true }
maplit = { workspace = true }
futures = { workspace = true }
num-bigint = { workspace = true }
tycho_simulation = { workspace = true }