[package]
name = "observe"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true, optional = true }
atty = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true, features = ["now"] }
console-subscriber = { workspace = true }
futures = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true, features = ["grpc-tonic"] }
opentelemetry_sdk = { workspace = true }
pin-project-lite = { workspace = true }
prometheus = { workspace = true }
prometheus-metric-storage = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true, features = ["macros"] }
tokio = { workspace = true, features = ["fs"] }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "time"] }
warp = { workspace = true }
tracing-serde = { workspace = true }

[lints]
workspace = true

[features]
default = []
axum-tracing = ["axum"]