[package]
name = "testlib"
version = "0.1.0"
edition = "2024"

[dependencies]
ethcontract = { workspace = true }
ethcontract-mock = { workspace = true }
hex-literal = { workspace = true }
anyhow = { workspace = true }
maplit = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true